# pytorch_model_in_c

./: .gitignore  CMakeLists.txt  README.md  example_commands.txt  run_build.zsh
ONNX/: CMakeLists.txt  README.md  example_commands.txt  run_build.zsh
ONNX/src/: main.c
ONNX/src/onnx_nn_in_c/: c_wrapper.cpp  c_wrapper.h  constants.h  onnx_nn.cpp  onnx_nn.h
TorchScript/: .clang-format  CMakeLists.txt  README.md  run_build.zsh
TorchScript/models/exported_data_groups_approx_2_epoch285/: README.txt
TorchScript/models/exported_data_groups_approx_2_epoch285/example_data/: python_output_line.txt
TorchScript/models/ts_data_groups_approx_2_epoch285/: README.txt  base_field.txt  norm_data.txt
TorchScript/models/ts_data_groups_approx_2_epoch285/example_data/: input_line.txt
TorchScript/src/torchscript_nn_in_c/: c_wrapper.cpp  c_wrapper.h
models/exported_V49_speedup_2_epoch35/: README.txt
models/exported_V49_speedup_4_epoch35/: README.txt
models/exported_V49_speedup_5_epoch31/: README.txt
models/exported_V49_speedup_6_epoch24/: README.txt  model.onnx  model.pt
models/exported_best_model_smaller_aberrations_v3_5_epoch20/: README.txt
models/exported_data_groups_approx_2_epoch285/: README.txt
models/exported_inference_speedup_v1_2_epoch267/: README.txt  model.onnx  model.pt
models/exported_inference_speedup_v2_1_epoch325/: README.txt
models/exported_picd_cnn_epoch13/: README.txt  base_field.txt  norm_data.txt
models/exported_picd_cnn_v2_epoch12/: base_field.txt  model.onnx
models/exported_picd_cnn_v2_epoch35/: README.txt  norm_data.txt
models/exported_picd_cnn_v4_epoch16/: base_field.txt  model.onnx
models/exported_picd_cnn_v4_epoch20/: base_field.txt  model.onnx  norm_data.txt
models/exported_weighted_aberration_ranges_local_v4_epoch15/: README.txt  norm_data.txt
src/: main.c
(+45 files in other folders)
